--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
   "name": "cuhacking-dashboard",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Local Hack Day (LHD) version",
+  "main": "app.js",
   "dependencies": {
-    "mapbox-gl": "^1.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "ejs": "^2.7.4",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.0"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cuhacking/cuHacking-dashboard.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "author": "cuHacking Team",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/cuhacking/cuHacking-dashboard/issues"
+  },
+  "homepage": "https://github.com/cuhacking/cuHacking-dashboard#readme"
 }
