--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "ejs": "^2.7.4",
     "express": "^4.17.1",
-    "nodemon": "^2.0.0"
+    "nodemon": "^2.0.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
